Corrected toolbar title overflow

--- a/src/assets/css/wegue.css
+++ b/src/assets/css/wegue.css
@@ -145,6 +145,7 @@ html {
    /* Introduced in IE 10, See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/ */
    -ms-user-select: none;
    user-select: none;
+   overflow: none;
 }
 
 .wgu-app-sidebar {
